--- a/templates/carrito.html
+++ b/templates/carrito.html
@@ -56,7 +56,7 @@
     </header>
 
     <!-- Navbar para el diseño de pantallas pequeñas -->
-    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
+    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none sticky-top">
         <div class="container-fluid">
             <div class="nombre_head">
                 <p>Crossover.sf</p>
