--- a/templates/item.html
+++ b/templates/item.html
@@ -58,7 +58,7 @@
 
     <!-- Navbar para el diseño de pantallas small -->
     <!-- Menú de navegación para dispositivos pequeños -->
-    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
+    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none sticky-top">
         <div class="container-fluid">
             <div class="nombre_head">
                 <p>Crossover.sf</p>
