--- a/templates/productos.html
+++ b/templates/productos.html
@@ -25,7 +25,6 @@
 
     <header>
         <div class="big_navbar">
-            <hr>
             <div class="mid_head">
                 <div class="nombre_head">
                     <p>Crossover.sf</p>
@@ -37,16 +36,13 @@
                 </form>
             </div>
             <div class="abajo">
-                <nav class="bot_head">
+                <nav class="bot_head sticky-top">
                     <ul>
                         <li><a>
                                 <div class="logonav"><img src="../assets/img/logo.jpg" alt="logonav"></div>
                             </a></li>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <!--<li><a href="rebajas.html">Rebajas</a></li>
-                    <li><a href="verano.html">Verano</a></li>
-                    <li><a href="novedades.html">Novedades</a></li>-->
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -54,7 +50,7 @@
         </div>
     </header>
 
-    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
+    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none sticky-top">
         <div class="container-fluid">
             <div class="nombre_head">
                 <p>Crossover.sf</p>
@@ -81,9 +77,6 @@
                             <ul class="dropdown-menu text-bg-dark" aria-labelledby="menuLinksDropdown">
                                 <li><a class="dropdown-item text-white" href="../index.html">Inicio</a></li>
                                 <li><a class="dropdown-item text-white" href="productos.html">Productos</a></li>
-                                <!--<li><a class="dropdown-item text-white" href="rebajas.html">Rebajas</a></li>
-                                <li><a class="dropdown-item text-white" href="verano.html">Verano</a></li>
-                                <li><a class="dropdown-item text-white" href="novedades.html">Novedades</a></li>  -->
                                 <li><a class="dropdown-item text-white" href="contacto.html">Contacto</a></li>
                             </ul>
                         </div>
