--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,10 +5,10 @@ $font-family_2: Arial, sans-serif;
 
 $bg_color: #dadada;
 
-$color_1: rgb(0, 0, 0);//$color_14: black; $color_11: #000; $color_1
+$color_1: rgb(0, 0, 0);
 $color_2: #f7f7f7;
 $color_3: rgb(70, 70, 70);
-$color_4: white; //$color_9: #ffffff;
+$color_4: white;
 $color_5: rgba(255, 255, 255, 0.425);
 $color_6: #333;
 $color_7: #2e2e2e;
