--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,112 +1,116 @@
-// _header.scss
+// Mixins
+@mixin flex-center($justify: center) {
+  display: flex;
+  align-items: center;
+  justify-content: $justify;
+}
+
+@mixin uppercase-bold($size: 13px) {
+  font-size: $size;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+@mixin border-bottom($color) {
+  border-bottom: 2px solid $color;
+}
+
+%unstyled-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+%link-base {
+  color: $color_1;
+  transition: all 0.3s ease;
+}
 
 .bot_head {
-  border-bottom: 2px solid $color_1;
-  .logonav {
-    img {
+  @include border-bottom($color_1);
+
+  .logonav img {
       height: 20px;
       width: auto;
       margin-top: 16px;
       border-radius: 30%;
       margin-left: 50%;
-    }
   }
+
   ul {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    padding-top: 4px;
-    margin: 0;
-    background-color: $color_4;
-    list-style: none;
+      @extend %unstyled-list;
+      padding-top: 4px;
+      background-color: $color_4;
   }
+
   li {
-    margin-right: 5%;
-    font-size: 13px;
-    font-weight: bold;
-    text-transform: uppercase;
-    position: relative;
-    transition: all 0.3s ease;
-    &:hover {
-      a {
-        color: $color_1;
-        text-shadow: 2px 2px 5px $col_shadow;
+      margin-right: 5%;
+      @include uppercase-bold();
+      position: relative;
+      transition: all 0.3s ease;
+
+      &:hover a {
+          color: $color_1;
+          text-shadow: 2px 2px 5px $col_shadow;
       }
-    }
   }
+
   a {
-    color: $color_1;
+      @extend %link-base;
   }
 }
 
 .fl_bar {
   position: relative;
-  margin-top: 0px;
   background-color: $color_1;
   color: $color_2;
   text-align: center;
-  height: 18px;
-  font-size: 10px;
-  font-weight: bold;
-  text-transform: uppercase;
-  display: flex;
-  align-items: bottom;
-  justify-content: center;
+  height: 12px;
+  @include uppercase-bold(10px);
+  @include flex-center();
   z-index: 20;
-  padding-top: 3px;
+  padding-top: 19px;
 }
 
-nav {
-  ul {
-    background-color: $color_1;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    height: 30px;
-    margin-left: 0px;
-    li {
-      a {
-        margin-right: 12%;
-      }
-    }
+nav ul {
+  background-color: $color_1;
+  @include flex-center(left);
+  height: 30px;
+
+  li a {
+      margin-right: 12%;
   }
 }
 
 header {
-  hr {
-    height: 1px;
-    background-color: $color_3;
-    margin: 0;
-  }
-  nav {
-    .logonav {
-      margin-left: 0;
-      justify-content: center;
-    }
-  }
   position: sticky;
-  top: -100px;
+  top: -79px;
   z-index: 100;
   margin-bottom: 0;
-  .search-box {
-    .lupita {
+
+  hr {
+      height: 1px;
+      background-color: $color_3;
+      margin: 0;
+  }
+
+  nav .logonav {
+      margin-left: 0;
+      justify-content: center;
+  }
+
+  .search-box .lupita {
       position: relative;
       top: -6px;
       padding: 0;
-    }
   }
 }
 
 .mid_head {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  @include flex-center(space-between);
   height: 80px;
   background-color: $color_1;
   color: $color_4;
-  padding: 0 4%;
-  padding-top: 15px;
-  font-size: 23px;
-  font-weight: bold;
+  padding: 15px 4% 0;
+  @include uppercase-bold(23px);
 }
