--- a/scss/layout/_holder-index.scss
+++ b/scss/layout/_holder-index.scss
@@ -1,77 +1,86 @@
+@mixin center-absolute($top) {
+    position: absolute;
+    top: $top;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@mixin text-shadow($color) {
+    text-shadow: 2px 2px 5px $color;
+}
+
+%button-base {
+    background-color: $color_1;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    color: $color_4;
+    height: 52px;
+    width: 150px;
+    font-size: 0.9em;
+    padding: 0;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
 .holder {
-	position: relative;
-	width: 100%;
-	height: 400px;
-	margin: 0;
-	overflow: hidden;
-	video {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		width: 101%;
-		height: 100%;
-		object-fit: cover;
-	}
-	.text-overlay1 {
-		position: absolute;
-		top: 30%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		color: $color_4;
-		font-size: 24px;
-		font-weight: bold;
-		text-shadow: 2px 2px 5px $col_shadow;
-		z-index: 1;
-	}
-	.text-overlay2 {
-		position: absolute;
-		text-align: center;
-		top: 45%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		color: $color_4;
-		font-size: 18px;
-		text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-		z-index: 2;
-	}
-	button {
-		background-color: $color_1;
-		padding: 10px 20px;
-		border: none;
-		border-radius: 5px;
-		cursor: pointer;
-		font-size: 16px;
-		color: $color_4;
-		height: 52px;
-		width: 150px;
-		font-size: 0.9em;
-		padding: 0;
-		font-weight: bold;
-		text-transform: uppercase;
-		&:active {
-			background-color: $color_10;
-		}
-	}
-	.bot1:active {
-		background-color: rgb(218, 218, 218);
-	}
-	.bot1, .bot2 {
-		position: absolute;
-		text-align: center;
-		top: 64%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		z-index: 2;
-	}
-	.bot1 {
-		margin-left: 80px;
-		background-color: $color_2;
-		border-style: solid;
-		border-width: 3px;
-		color: $color_1;
-	}
-	.bot2 {
-		margin-left: -80px;
-	}
+    position: relative;
+    width: 100%;
+    height: 400px;
+    margin: 0;
+    overflow: hidden;
+
+    video {
+        @include center-absolute(50%);
+        width: 101%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .text-overlay1 {
+        @include center-absolute(30%);
+        color: $color_4;
+        font-size: 24px;
+        font-weight: bold;
+        @include text-shadow($col_shadow);
+        z-index: 1;
+    }
+
+    .text-overlay2 {
+        @include center-absolute(45%);
+        color: $color_4;
+        font-size: 18px;
+        @include text-shadow($col_shadow);
+        z-index: 2;
+    }
+
+    button {
+        @extend %button-base;
+        &:active {
+            background-color: $color_10;
+        }
+    }
+
+    .bot1, .bot2 {
+        @extend %button-base;
+        @include center-absolute(64%);
+        z-index: 2;
+    }
+
+    .bot1 {
+        margin-left: 80px;
+        background-color: $color_2;
+        border-style: solid;
+        border-width: 3px;
+        color: $color_1;
+        &:active {
+            background-color: $color_8;
+        }
+    }
+
+    .bot2 {
+        margin-left: -80px;
+    }
 }
