--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -60,7 +60,7 @@
     </header>
 
     <!-- Menú de navegación para dispositivos pequeños -->
-    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
+    <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none sticky-top">
         <div class="container-fluid">
             <div class="nombre_head">
                 <p>Crossover.sf</p>
